pages/movies/movies.module.scss
.banner {
  height: 100vh;
  width: 100vw;
  min-height: 800px;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding-bottom: 100px;

  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)),
    url(https://res.cloudinary.com/dwbsxpk82/image/upload/v1640179209/portfolio/kki2so836ji1ptws2epr.jpg);
  background-size: cover;
}

//search bar
.col {
  display: flex;
  align-items: center;
}
.search {
  color: white;
  display: flex;
  align-items: center;
  justify-content: center;

  svg {
    height: 40px;
    position: block;
  }
}

//slider

.slider {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 50px;
  width: 100%;
}
.gridcontainer {
  display: grid;
  grid-template-columns: repeat(5, minmax(200px, 1fr));
  grid-template-rows: repeat(3, 1fr);

  gap: 20px;
  width: 100%;
  position: relative;
}
.row {
  display: grid;
  gap: 20px;
  grid-template-columns: repeat(3, 1fr);
  grid-column: 2 / 5;
  width: 100%;
  position: absolute;
}
.box {
  background-color: rgba(0, 0, 0, 0.4);

  height: 100%;
  width: 100%;

  font-size: 12px;
}

.footer {
  display: flex;
  flex: 1;
  padding: 2rem 0;
  border-top: 1px solid #eaeaea;
  justify-content: center;
  align-items: center;
}

.back {
  color: white;
  display: grid;
  grid-column: 1 / 2;
  opacity: 0.8;
  grid-row: 2/3;
  height: 100%;
  &:hover {
    opacity: 1;
  }
}
.next {
  color: white;
  display: grid;
  opacity: 0.8;
  grid-column: 5 / 6;
  grid-row: 2/3;

  height: 100%;
  &:hover {
    opacity: 1;
  }
}
.insidegrid {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.input {
  transform-origin: right center;
  position: block;
  padding: 5px 10px;

  z-index: 0;
  color: white;
  font-size: 24px;
  background-color: transparent;
  border: 1px solid white;
}

.input::placeholder {
  color: white;
}

